tests/rosetta/out/Pascal/call-an-object-method-2.error
fpc: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /tmp/call-an-object-method-2.pas
call-an-object-method-2.pas(22,31) Error: Illegal expression
call-an-object-method-2.pas(22,39) Error: Type identifier expected
call-an-object-method-2.pas(22,39) Fatal: Syntax error, "," expected but "(" found
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
